# english-ai-mentor-bot

./: .env.example  .gitignore  CMakeLists.txt  README.md
include/: config.h  database.h  groq_client.h  logger.h  render_utils.h  telegram_client.h
resources/: fallback_words.json
src/: main.cpp
src/ai/: groq_client.cpp
src/bot/: telegram_client.cpp
src/storage/: database.cpp
src/utils/: config.cpp  logger.cpp  render_utils.cpp
